@@ -1666,23 +1666,23 @@ static const struct dis386 dis386_twobyte[] = {
   { "(bad)",		{ XX } },
   { "(bad)",		{ XX } },
   /* 40 */
-  { "cmovo",		{ Gv, Ev } },
-  { "cmovno",		{ Gv, Ev } },
-  { "cmovb",		{ Gv, Ev } },
-  { "cmovae",		{ Gv, Ev } },
-  { "cmove",		{ Gv, Ev } },
-  { "cmovne",		{ Gv, Ev } },
-  { "cmovbe",		{ Gv, Ev } },
-  { "cmova",		{ Gv, Ev } },
+  { "cmovoS",		{ Gv, Ev } },
+  { "cmovnoS",		{ Gv, Ev } },
+  { "cmovbS",		{ Gv, Ev } },
+  { "cmovaeS",		{ Gv, Ev } },
+  { "cmoveS",		{ Gv, Ev } },
+  { "cmovneS",		{ Gv, Ev } },
+  { "cmovbeS",		{ Gv, Ev } },
+  { "cmovaS",		{ Gv, Ev } },
   /* 48 */
-  { "cmovs",		{ Gv, Ev } },
-  { "cmovns",		{ Gv, Ev } },
-  { "cmovp",		{ Gv, Ev } },
-  { "cmovnp",		{ Gv, Ev } },
-  { "cmovl",		{ Gv, Ev } },
-  { "cmovge",		{ Gv, Ev } },
-  { "cmovle",		{ Gv, Ev } },
-  { "cmovg",		{ Gv, Ev } },
+  { "cmovsS",		{ Gv, Ev } },
+  { "cmovnsS",		{ Gv, Ev } },
+  { "cmovpS",		{ Gv, Ev } },
+  { "cmovnpS",		{ Gv, Ev } },
+  { "cmovlS",		{ Gv, Ev } },
+  { "cmovgeS",		{ Gv, Ev } },
+  { "cmovleS",		{ Gv, Ev } },
+  { "cmovgS",		{ Gv, Ev } },
   /* 50 */
   { MOD_TABLE (MOD_0F51) },
   { PREFIX_TABLE (PREFIX_0F51) },
